[gd_scene load_steps=4 format=3 uid="uid://bvqudd0jiv2f3"]

[ext_resource type="Script" path="res://Views/TitleView.gd" id="1_y1v53"]
[ext_resource type="Script" path="res://Views/AboutPanel.gd" id="2_jqeos"]
[ext_resource type="AudioStream" uid="uid://bmai3htj5x50j" path="res://World/Ambient Concern.ogg" id="2_yusi0"]

[node name="TitleuView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1v53")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 80
text = "Assecla"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "START
"

[node name="Quit" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "QUIT"

[node name="About" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "ABOUT"

[node name="Panel" type="Panel" parent="MarginContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_jqeos")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[center]Made With [color=red]Love[/color] for the Godot Wild Jam

by

Nathan Hold - [url]https://nhold.itch.io/[/url]

Tim Plester [url]https://oshroth.itch.io/[/url]

Jared [url]https://coldchange.itch.io/[/url]

[b]LICENCES[/b]

[font_size=12]Copyright (c) 2014-present Godot Engine contributors.
  Copyright (c) 2007-2014 Juan Linietsky, Ariel Manzur.

  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the \"Software\"), to deal
  in the Software without restriction, including without limitation the rights
  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  copies of the Software, and to permit persons to whom the Software is
  furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included in all
  copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  SOFTWARE.

  -- Godot Engine <https://godotengine.org>

MIT License

Copyright (c) 2023 Jan Thom√§

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
[/font_size][/center]
"
selection_enabled = true

[node name="Button" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_yusi0")
volume_db = -16.675
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="meta_clicked" from="MarginContainer/Panel/MarginContainer/VBoxContainer/Label" to="MarginContainer/Panel" method="_on_label_meta_clicked"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/Button" to="MarginContainer/Panel" method="_on_button_pressed"]
